*** Steel Engine 1.1.0 (2006 dec ??) 
многие кардинальные изменения архитектуры. База для первых демок

+Object Shadow: кеш игровый обхектов в движке
+Passive engine interface: интерфйс был перенесён в движок, что упростило использование объектов (Client-Server архитектура)
+Config: новый формат хранения конфигов с шаблонами
-resModel, resConf, resScript: убраны старые форматы ресурсов. Теперь всё это умеет делать Config.
+Scene file format: Формт хранения сцены основе новых конфигов
-physic: временно убрана физика для тестирования новой архитектуры
+self test: система самотестирования на примере конфигов
+3D audio
+steel lib: использование движка во внешних проектах как static lib
+3D OpenGL engine: автоопреденение возможностей видеокарты, поддержка OpenGL 1.0, 1.1, 1.3, 1.5, 2.0. GLSL


*** Steel Engine 1.0.1 (2006 june 10, r148, steel_demo-14-r1-particle_system)
выпушена как баналаврская работы KindeX'a и Def'a. Отточка архитектуры

+3D Collision detection: polygonal objects
+Particle System


*** Steel Engine 1.0.0 (2006 April 05; steel_demo-09-r1-internal_demo1)
первый релиз. Динамическое освещение

+3D OpenGL engine: dynamic lighting, bump-mapping
+Interface-Engine arhirecture
