@@ -9,7 +9,7 @@ camera =
 }
 
 drawHelper=0
-paused=0
+paused=1
 
 game_class = "ps" // free_scene, ps
 
