@@ -8,7 +8,7 @@ diffuse_map =
 	texCoordsRotation = 0.0
 	texCoordsScale = (1 1 1)
 	texCoordsTranslation = (0 0 0)
-	k = 0.4
+	k = 3
 }
 
 specular_map = 
