@@ -1,2 +1,0 @@
-cd bin
-demo.VS8.Release.exe
